<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Lupus_masterActivity!</string>
    <string name="app_name">Lupus_master</string>
    <string name="nightonepeasants">NightOnePeasants</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="master">Master</string>
    <string name="peasant">Peasants</string>
    <string name="werewolf">Werewolves</string>
    <string name="veggente">Veggente</string>
    <string name="paparazzo">Paparazzo</string>
    <string name="guardian">Guardian</string>
    <string name="zero">0</string>
    <string name="play">Play!</string>
    <string name="next">Next</string>
    <string name="nightonewolves">NightOneWolves</string>
    <string name="nightonepaparazzo">NightOnePaparazzo</string>
    <string name="spy">To spy</string>
    <string name="choose">Choose</string>
    <string name="veggeggiare">To veggeggiare</string>
    <string name="nightoneveggente">NightOneVeggente</string>
    <string name="nightveggente">NightVeggente</string>
    <string name="nightoneguardian">NightOneGuardian</string>
    <string name="protect">To protect</string>
    <string name="day">Day</string>
    <string name="died">died</string>
    <string name="spied">was spied</string>
    <string name="wentohim">went to him</string>
    <string name="lynched">has been lynched</string>
    <string name="he">He</string>
    <string name="startnight">Start Night</string>
    <string name="bite">To bite</string>
    <string name="whobites">Who bites?</string>
    <string name="nightwolves">NightWolves</string>
    <string name="nightpaparazzo">NightPaparazzo</string>
    <string name="nightguardian">NightGuardian</string>
    
</resources>