<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/werewolf"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bite"
        android:textAppearance="?android:attr/textAppearanceLarge" />

     <Spinner
         android:id="@+id/spinner100"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />

     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/whobites"
         android:textAppearance="?android:attr/textAppearanceLarge" />

     <Spinner
         android:id="@+id/spinner101"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />

     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >

         <Button
             android:id="@+id/button102"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:text="@string/next" />

     </RelativeLayout>

</LinearLayout>