<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        	<TextView
        		android:id="@+id/textView1"
        		android:layout_width="wrap_content"
        		android:layout_height="60dp"
        		android:text="@string/master"
        		android:textAppearance="?android:attr/textAppearanceLarge" />

        	<CheckBox
        	    android:id="@+id/checkBox4"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_alignParentRight="true"
        	    android:clickable= "false"
        	    android:checked="true"
        	    android:layout_alignParentTop="true" />
        
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/peasant"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="180dp"
            android:text="@string/minus" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/button1"
            android:ems="10"
            android:text="@string/zero"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_alignBaseline="@+id/editText1"
            android:layout_alignBottom="@+id/editText1"
            android:layout_toRightOf="@+id/editText1"
            android:text="@string/plus" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        	<TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/werewolf"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="180dp"
            android:text="@string/minus" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/button3"
            android:ems="10"
            android:text="@string/zero"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/button4"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_alignBaseline="@+id/editText2"
            android:layout_alignBottom="@+id/editText2"
            android:layout_toRightOf="@+id/editText2"
            android:text="@string/plus" />
        
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        	<TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/veggente"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        	<CheckBox
        	    android:id="@+id/checkBox1"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_alignParentRight="true"
        	    android:clickable= "false"
        	    android:checked="true"
        	    android:layout_alignParentTop="true" />
        
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        	<TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/paparazzo"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        	<CheckBox
        	    android:id="@+id/checkBox2"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_alignParentRight="true"
        	    android:layout_alignParentTop="true" />
        
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        	<TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/guardian"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        	<CheckBox
        	    android:id="@+id/checkBox3"
        	    android:checked="true"
        	    android:clickable= "false"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_alignParentRight="true"
        	    android:layout_alignParentTop="true" />
        
    </RelativeLayout>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"  />

</LinearLayout>